--- a/Lab6/app/src/main/res/values/strings.xml
+++ b/Lab6/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">lab6</string>
-    <string name="horoscopeInput">Enter Star Sign</string>
+    <string name="app_name">Lab6</string>
+    <string name="horoscopeEntry" />
 </resources>
